[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/art/characters/side/algernon.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/scenes/prologue - planet/ProloguePlanet.gd" type="Script" id=2]
[ext_resource path="res://assets/art/environments/side/backgrounds/prologue-planet/CelestialBodies.png" type="Texture" id=3]
[ext_resource path="res://src/templates/InteractionPoint.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scripts/scenes/prologue - planet/interactions/IntroOrb.gd" type="Script" id=5]
[ext_resource path="res://assets/art/environments/side/backgrounds/prologue-planet/Foreground.png" type="Texture" id=6]
[ext_resource path="res://assets/sound/sfx/ambient/prologue-planet/prologue_planet_ambient.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/art/environments/side/backgrounds/prologue-planet/BackgroundNear.png" type="Texture" id=8]
[ext_resource path="res://assets/art/environments/side/backgrounds/prologue-planet/Midground.png" type="Texture" id=10]
[ext_resource path="res://src/player/PlayerSideScroll.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/art/environments/side/backgrounds/prologue-planet/Sky.png" type="Texture" id=12]
[ext_resource path="res://assets/art/environments/side/backgrounds/prologue-planet/BackgroundFar.png" type="Texture" id=14]
[ext_resource path="res://assets/sound/sfx/gunshots/FX_gunshot1_session.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/art/environments/side/backgrounds/prologue-planet/Structure.png" type="Texture" id=18]


[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 48.0486, 14.5665 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1400, 1 )

[sub_resource type="Animation" id=6]
length = 60.0
tracks/0/type = "value"
tracks/0/path = NodePath("ParallaxBackground/Sky:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10, 20.1, 40.1, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.858824, 0.733333, 0.733333, 1 ), Color( 0.447059, 0.282353, 0.282353, 1 ), Color( 0.117647, 0.0745098, 0.0745098, 1 ), Color( 0.0509804, 0.0313726, 0.0313726, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ParallaxBackground/BackgroundFar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10, 20.1, 40.1, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.858824, 0.733333, 0.733333, 1 ), Color( 0.447059, 0.282353, 0.282353, 1 ), Color( 0.117647, 0.0745098, 0.0745098, 1 ), Color( 0.0509804, 0.0313726, 0.0313726, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ParallaxBackground/BackgroundNear:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 10, 20.1, 40.1, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.858824, 0.733333, 0.733333, 1 ), Color( 0.447059, 0.282353, 0.282353, 1 ), Color( 0.117647, 0.0745098, 0.0745098, 1 ), Color( 0.0509804, 0.0313726, 0.0313726, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ParallaxBackground/Midground:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 10, 20.1, 40.1, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.858824, 0.733333, 0.733333, 1 ), Color( 0.447059, 0.282353, 0.282353, 1 ), Color( 0.117647, 0.0745098, 0.0745098, 1 ), Color( 0.0509804, 0.0313726, 0.0313726, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ParallaxBackground/Foreground:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 10, 20.1, 40.1, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.858824, 0.733333, 0.733333, 1 ), Color( 0.447059, 0.282353, 0.282353, 1 ), Color( 0.117647, 0.0745098, 0.0745098, 1 ), Color( 0.0509804, 0.0313726, 0.0313726, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 10, 20.1, 40.1, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.858824, 0.733333, 0.733333, 1 ), Color( 0.447059, 0.282353, 0.282353, 1 ), Color( 0.117647, 0.0745098, 0.0745098, 1 ), Color( 0.0509804, 0.0313726, 0.0313726, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ParallaxBackground/CelestialBodies/CelestialBodies:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 20.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -199, 0 ), Vector2( 400, 278 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ParallaxBackground/CelestialBodies/CelestialBodies:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 10, 20.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.815686, 0.815686, 0.815686, 1 ), Color( 0.454902, 0.454902, 0.454902, 1 ) ]
}

[sub_resource type="Animation" id=7]

[node name="Prologue-Planet" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
z_as_relative = false
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 1440, 0 )

[node name="Sky" type="Sprite" parent="ParallaxBackground/Sky"]
texture = ExtResource( 12 )
centered = false

[node name="CelestialBodies" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 1 )

[node name="CelestialBodies" type="Sprite" parent="ParallaxBackground/CelestialBodies"]
position = Vector2( -199, 0 )
z_as_relative = false
texture = ExtResource( 3 )
centered = false

[node name="BackgroundFar" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.05, 1 )
motion_mirroring = Vector2( 1440, 0 )

[node name="BackgroundFar" type="Sprite" parent="ParallaxBackground/BackgroundFar"]
texture = ExtResource( 14 )
centered = false

[node name="BackgroundNear" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 1440, 0 )

[node name="BackgroundNear" type="Sprite" parent="ParallaxBackground/BackgroundNear"]
texture = ExtResource( 8 )
centered = false

[node name="Midground" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 1440, 0 )

[node name="Midground" type="Sprite" parent="ParallaxBackground/Midground"]
texture = ExtResource( 10 )
centered = false

[node name="Foreground" type="ParallaxLayer" parent="ParallaxBackground"]
z_as_relative = false
motion_mirroring = Vector2( 1440, 0 )

[node name="Foreground" type="Sprite" parent="ParallaxBackground/Foreground"]
texture = ExtResource( 6 )
centered = false

[node name="Structure" type="Sprite" parent="."]
position = Vector2( 2366, 135 )
texture = ExtResource( 18 )

[node name="Triggers" type="Node" parent="."]

[node name="LookBack" type="Area2D" parent="Triggers"]
position = Vector2( 43.3018, 233.381 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/LookBack"]
shape = SubResource( 1 )

[node name="TimeAdvance" type="Area2D" parent="Triggers"]
position = Vector2( 807.343, 221.416 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/TimeAdvance"]
shape = SubResource( 2 )

[node name="End" type="Area2D" parent="Triggers"]
position = Vector2( 2754.04, 230.281 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/End"]
shape = SubResource( 3 )

[node name="Interactions" type="Node" parent="."]

[node name="Orb" parent="Interactions" instance=ExtResource( 4 )]
position = Vector2( 459.831, 256.26 )
script = ExtResource( 5 )

[node name="CollisionShape2D" parent="Interactions/Orb" index="0"]
shape = SubResource( 4 )

[node name="InteractionUI" parent="Interactions/Orb" index="1"]
margin_left = 5.32196
margin_top = -34.9207
margin_right = 5.32196
margin_bottom = -34.9207

[node name="InteractionIndicator" parent="Interactions/Orb/InteractionUI" index="0"]
visible = false

[node name="OptionHBoxContainer" parent="Interactions/Orb/InteractionUI" index="1"]
margin_top = -48.4481
margin_bottom = -48.4481

[node name="Player" parent="." instance=ExtResource( 11 )]
position = Vector2( 77.8836, 229 )
z_index = 50

[node name="Sprite" parent="Player" index="1"]
texture = ExtResource( 1 )

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2( 8, -758.916 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 1396.94, 1020.92 )
shape = SubResource( 5 )

[node name="AmbientSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="FX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/TimeAdvances = SubResource( 6 )
anims/WaitingDarkness = SubResource( 7 )
[connection signal="body_entered" from="Triggers/LookBack" to="." method="_on_LookBack_body_entered"]
[connection signal="body_entered" from="Triggers/TimeAdvance" to="." method="_on_TimeAdvance_body_entered"]
[connection signal="body_entered" from="Triggers/End" to="." method="_on_End_body_entered"]

[editable path="Interactions/Orb"]

[editable path="Player"]
